# AndersonCodeTest

./: CMakeLists.txt  readme.md  workLog.md
Source/: Envelope.cpp  Envelope.hpp  EnvelopeComponent.cpp  EnvelopeComponent.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp
